--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".ResultPage"
+            android:exported="false" />
+        <activity
             android:name=".QuizQuestionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity_quiz_questions"
             android:exported="false" />
         <activity
             android:name=".Question"
